--- a/section8-courseProject_directives/src/index.html
+++ b/section8-courseProject_directives/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Section 6 - Course Project: Components and Databinding</title>
+  <title>Section 8 - Course Project: Directives</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
